--- a/templates/index.html
+++ b/templates/index.html
@@ -1,70 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
-      <div class="header">
-        <h1 class="text-center text-muted">Dynamic dropdowns</h1>
-      </div>
-
-      <br><br><br>
-
-      <div class="row">
-        <div class="form-group col-xs-6">
-          <label for="all_classes">Select a state</label>
-          <select class="form-control" style="color: white; background: #34568B;" id="all_classes">
-            {% for o in all_classes %}
-                    <option value="{{ o }}">{{ o }}</option>
-            {% endfor %}
-          </select>
-        </div>
-        <div class="form-group col-xs-6">
-          <label for="all_entries">Select a city</label>
-          <select class="form-control" style="color:white; background:#009B77;" id="all_entries">
-            {% for o in all_entries %}
-                    <option value="{{ o }}">{{ o }}</option>
-            {% endfor %}
-          </select>
-        </div>
-      </div>
-
-      <div>
-        <button type="button" style="color:white; background:#3498DB;" id="process_input">Process selection!</button>
-      </div><br><br>
-      <div id="processed_results">
-        Here we display some output based on the selection
-      </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-1.12.4.js" type="text/javascript"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function() {
-
-        $('#all_classes').change(function(){
-
-          $.getJSON('/_update_dropdown', {
-            selected_class: $('#all_classes').val()
-
-          }).done(function(data) {
-                $('#all_entries').html(data.html_string_selected);
-           })
-        });
-        $('#process_input').bind('click', function() {
-
-            $.getJSON('/_process_data', {
-                selected_class: $('#all_classes').val(),
-                selected_entry: $('#all_entries').val(),
-
-
-            }).success(function(data) {
-                $('#processed_results').text(data.random_text);
-            })
-          return false;
-
-        });
-      });
-    </script>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <title>Home</title>
+</head>
+<body>
+    <h1>Welcome to the Flask App</h1>
+    <ul>
+        <li><a href="{{ url_for('register') }}">Register</a></li>
+        <li><a href="{{ url_for('login') }}">Login</a></li>
+        <li><a href="{{ url_for('logout') }}">Logout</a></li>
+        <li><a href="{{ url_for('show_area') }}">Show Areas</a></li>
+        <li><a href="{{ url_for('show_cities') }}">Show Cities</a></li>
+        <li><a href="{{ url_for('select_area_position') }}">Dynamic Dropdown</a></li>
+        <li><a href="{{ url_for('add_state') }}">Add State</a></li>
+        <li><a href="{{ url_for('add_city') }}">Add City</a></li>
+    </ul>
+</body>
 </html>
